--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,3 +1,6 @@
+/* ----------------------------------------- */
+/* COLORES */
+/* ------------------------------------------*/
 @import url("https://fonts.googleapis.com/css2?family=Turret+Road:wght@200;300;400;500;700;800&display=swap");
 h1 {
   font-family: 'Turret Road', cursive;
@@ -17,3 +20,64 @@ p {
 /* ------------------------------------------*/
 .pokemon-logo {
   max-height: 200px; }
+
+/* ----------------------------------------- */
+/* FORMULARIO */
+/* ------------------------------------------*/
+.login-box {
+  width: 320px;
+  height: 430px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 20px;
+  background: #DD082F;
+  color: #dfdfdf;
+  font-family: 'Turret Road', cursive; }
+
+.login-title {
+  display: block;
+  margin: 60px 0 20px 0;
+  color: #131313;
+  text-align: center;
+  text-transform: capitalize; }
+
+.input-field {
+  box-sizing: border-box;
+  width: 100%;
+  height: 40px;
+  margin: 0 0 20px 0;
+  border: none;
+  border-bottom: 1px solid #cfd8dc;
+  outline: none;
+  background: none;
+  color: #cfd8dc; }
+
+.btn-submit {
+  width: 100%;
+  height: 40px;
+  margin: 20px 0;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  background: #FFCB05;
+  color: #131313;
+  font-size: 17px;
+  font-weight: bold;
+  text-transform: capitalize;
+  cursor: pointer; }
+
+.btn-submit:hover {
+  background: #ffa000;
+  transition: .8s ease; }
+
+.link-login {
+  display: block;
+  margin: 10px 0;
+  float: right;
+  color: #cfd8dc;
+  text-decoration: none; }
+
+.link-login:hover {
+  margin-right: -7px;
+  color: #ffa000;
+  transition: .8s ease; }
