--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -12,3 +12,71 @@
 .pokemon-logo {
   max-height: 200px;
 }
+
+/* ----------------------------------------- */
+/* FORMULARIO */
+/* ------------------------------------------*/
+.login-box {
+  width        : 320px;
+  height       : 430px;
+  margin       : 0 auto;
+  padding      : 20px;
+  border-radius: 20px;
+  background   : $bg-red-secondary;
+  color        : $text-primary1;
+  font-family  : 'Turret Road', cursive;
+}
+
+.login-title {
+  display       : block;
+  margin        : 60px 0 20px 0;
+  color         : $text-secondary;
+  text-align    : center;
+  text-transform: capitalize;
+}
+
+.input-field {
+  box-sizing   : border-box;
+  width        : 100%;
+  height       : 40px;
+  margin       : 0 0 20px 0;
+  border       : none;
+  border-bottom: 1px solid #cfd8dc;
+  outline      : none;
+  background   : none;
+  color        : #cfd8dc;
+}
+
+.btn-submit {
+  width         : 100%;
+  height        : 40px;
+  margin        : 20px 0;
+  border        : none;
+  border-radius : 20px;
+  outline       : none;
+  background    : $text-amarillo;
+  color         : $text-secondary;
+  font-size     : 17px;
+  font-weight   : bold;
+  text-transform: capitalize;
+  cursor        : pointer;
+}
+
+.btn-submit:hover {
+  background: #ffa000;
+  transition: .8s ease;
+}
+
+.link-login {
+  display        : block;
+  margin         : 10px 0;
+  float          : right;
+  color          : #cfd8dc;
+  text-decoration: none;
+}
+
+.link-login:hover {
+  margin-right: -7px;
+  color       : #ffa000;
+  transition  : .8s ease;
+}
