--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -88,6 +88,7 @@ p {
   display: flex;
   flex-direction: column;
   max-width: 300px;
+  height: 420px;
   padding: 20px;
   border: 5px solid #502727;
   border-radius: 5px;
@@ -104,3 +105,9 @@ p {
 
 .user-card__img img {
   border: 5px solid #ffa600; }
+
+/* ----------------------------------------- */
+/* CARD-REVERSE */
+/* ------------------------------------------*/
+.reverse-card {
+  max-width: 300px; }
