--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -88,6 +88,7 @@
   display       : flex;
   flex-direction: column;
   max-width     : 300px;
+  height: 420px;
   padding       : 20px;
   border        : 5px solid rgb(80, 39, 39);
   border-radius : 5px;
@@ -111,4 +112,11 @@
 
 .user-card__img img {
   border: 5px solid rgb(255, 166, 0);
+}
+
+/* ----------------------------------------- */
+/* CARD-REVERSE */
+/* ------------------------------------------*/
+.reverse-card {
+  max-width     : 300px;
 }
