--- a/styles/scss/_fonts.scss
+++ b/styles/scss/_fonts.scss
@@ -1,2 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Turret+Road:wght@200;300;400;500;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Turret+Road:wght@200;300;400;500;700;800&display=swap");
 // font-family: 'Turret Road', cursive;
