--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -1,11 +1,15 @@
 h1 {
-  font-family: 'Turret Road', cursive;
+  font-family: "Turret Road", cursive;
   font-weight: 400;
-  color: $text-primary;
+  color      : $text-primary;
 }
 
 p {
-  font-family: 'Turret Road', cursive;
+  font-family: "Turret Road", cursive;
   font-weight: 400;
   // color: $text-primary;
-} 
+}
+
+.spacer {
+  margin-top: 50px;
+}
