--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -18,7 +18,7 @@
 /* ------------------------------------------*/
 .login-box {
   width        : 320px;
-  height       : 430px;
+  height       : 250px;
   margin       : 0 auto;
   padding      : 20px;
   border-radius: 20px;
@@ -29,7 +29,7 @@
 
 .login-title {
   display       : block;
-  margin        : 60px 0 20px 0;
+  margin        : 10px 0 20px 0;
   color         : $text-secondary;
   text-align    : center;
   text-transform: capitalize;
@@ -87,9 +87,9 @@
 .user-card {
   display       : flex;
   flex-direction: column;
-  max-width     : 300px;
-  height: 420px;
-  padding       : 20px;
+  max-width     : 200px;
+  height        : 320px;
+  padding       : 7px;
   border        : 5px solid rgb(80, 39, 39);
   border-radius : 5px;
   background    : rgb(255, 0, 0);
@@ -118,5 +118,15 @@
 /* CARD-REVERSE */
 /* ------------------------------------------*/
 .reverse-card {
-  max-width     : 300px;
+  max-width: 200px;
+}  
+
+/* ----------------------------------------- */
+/* BATTLEFIELD */
+/* ------------------------------------------*/
+.battlefield {
+  background-image : url('../../assets/img/battlefield.jpg');
+  background-repeat: no-repeat;
+  background-size  : cover;
 }
+
