Estructura con Holo-Cards

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,6 +1,7 @@
 @import "./_variables";
 @import "./_fonts";
 @import "./_layout";
+@import "./holo-cards"; 
 
 .bg-red-primary {
   background: $bg-red-primary;
