--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -88,8 +88,8 @@
 .user-card {
   display       : flex;
   flex-direction: column;
-  max-width     : 200px;
-  height        : 320px;
+  max-width     : 160px;
+  height        : 220px;
   padding       : 7px;
   border        : 5px solid rgb(80, 39, 39);
   border-radius : 5px;
@@ -119,8 +119,14 @@
 /* CARD-REVERSE */
 /* ------------------------------------------*/
 .reverse-card {
-  max-width: 200px;
+  max-width: 160px;
+  height   : 221px;
 }  
+
+.reverse-card-img {
+  max-width: 160px;
+  height   : 221px;
+}
 
 /* ----------------------------------------- */
 /* BATTLEFIELD */
