SE RESTAURA FONTS

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,6 +1,6 @@
 @import "./_variables";
 @import "./_layout";
-@import "./holo-cards";
+// @import "./holo-cards";
 @import "./fonts"; 
 
 .bg-red-primary {
