--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,7 +1,7 @@
 @import "./_variables";
 @import "./_layout";
-// @import "./holo-cards";
-@import "./fonts"; 
+@import "./holo-cards";
+@import "./fonts";
 
 .bg-red-primary {
   background: $bg-red-primary;
@@ -74,15 +74,15 @@
   float          : right;
   color          : #cfd8dc;
   text-decoration: none;
-}
+} 
 
 .link-login:hover {
   margin-right: -7px;
   color       : #ffa000;
   transition  : 0.8s ease;
-}
-
-/* ----------------------------------------- */
+}   
+          
+/* ------------ ----------------------------- */
 /* CARD */
 /* ------------------------------------------*/
 // .user-card {
@@ -119,13 +119,12 @@
 /* CARD22 */
 /* ------------------------------------------*/
 .carta_player {
-  background: radial-gradient(circle, 
-  #ffffff 0%, #e29a67 50%, #d53636 100%);
+  background : radial-gradient(circle, #ffffff 0%, #e29a67 50%, #d53636 100%);
   height     : 220px;
-  font-family: 'Turret Road', cursive;
+  font-family: "Turret Road", cursive;
   font-weight: 800;
   height     : 220px;
-  width      : calc(159px)
+  width      : calc(159px);
 }
 
 .pokemon-name-hp {
@@ -188,7 +187,7 @@
   margin : 0;
   padding: 0;
 }
- 
+
 .pokemon-card {
   max-width         : 165px;
   margin-right      : 90px;
@@ -232,8 +231,8 @@
 /* CARD-REVERSE */
 /* ------------------------------------------*/
 .reverse-card {
-  max-width: 160px;
-  height   : 221px;
+  max-width   : 160px;
+  height      : 221px;
   margin-right: 90px;
 }
 
