--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -207,7 +207,13 @@
 
 .pokemon-hp {
   color    : #c23b1f;
-  font-size: 0.7em;
+  font-size: 15px;
+}
+
+.pokemon-hp::before {
+  color    : #383838;
+  font-size: 10px;
+  content: 'STATS: '; 
 }
 
 .pokemon-type {
@@ -216,7 +222,7 @@
 
 .pokemon-id {
   color    : darkgreen;
-  font-size: 0.6em;
+  font-size: 15px;
 }
 
 .pokemon-type-id {
@@ -231,7 +237,7 @@
 /* CARD-REVERSE */
 /* ------------------------------------------*/
 .reverse-card {
-  max-width   : 160px;
+ width   : 160px;
   height      : 221px;
   margin-right: 90px;
 }
