--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -203,19 +203,19 @@ p {
 /* CARD22 */
 /* ------------------------------------------*/
 .carta_player {
+  width: calc(159px);
+  height: 220px;
+  height: 220px;
   background: radial-gradient(circle, #ffffff 0%, #e29a67 50%, #d53636 100%);
-  height: 220px;
   font-family: "Turret Road", cursive;
-  font-weight: 800;
-  height: 220px;
-  width: calc(159px); }
+  font-weight: 800; }
 
 .pokemon-name-hp {
-  margin-bottom: 10px;
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin-bottom: 10px; }
 
 .pokemon-container {
   display: flex;
@@ -274,6 +274,17 @@ p {
   box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
   text-align: center; }
 
+.card-back {
+  max-width: 165px;
+  margin-right: 90px;
+  padding: 15px 15px 0 15px;
+  border: 8px solid #0f1b5d;
+  border-radius: 15px;
+  -webkit-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
+  text-align: center; }
+
 .imageContainer {
   border-radius: 50%;
   background-color: beige; }
@@ -305,13 +316,17 @@ p {
 /* CARD-REVERSE */
 /* ------------------------------------------*/
 .reverse-card {
-  width: 160px;
-  height: 221px;
+  width: 143px;
+  height: 204px;
   margin-right: 90px; }
 
 .reverse-card-img {
   max-width: 160px;
   height: 221px; }
+
+.reverse-card-img img {
+  width: 143px;
+  height: 204px; }
 
 /* ----------------------------------------- */
 /* BATTLEFIELD */
