--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -13,6 +13,119 @@ p {
 .spacer {
   margin-top: 50px; }
 
+:root {
+  --color1: rgb(0, 231, 255);
+  --color2: rgb(255, 0, 231);
+  --back: url(https://cdn2.bulbagarden.net/upload/1/17/Cardback.jpg);
+  --charizard1: #fac;
+  --charizard2: #ddccaa;
+  --charizardfront: url(https://assets.codepen.io/13471/charizard-gx.webp);
+  --pika1: #54a29e;
+  --pika2: #a79d66;
+  --pikafront: url(https://assets.codepen.io/13471/pikachu-gx.webp);
+  --eevee1: #efb2fb;
+  --eevee2: #acc6f8;
+  --eeveefront: url(https://assets.codepen.io/13471/eevee-gx.webp);
+  --mewtwo1: #efb2fb;
+  --mewtwo2: #acc6f8;
+  --mewtwofront: url(https://assets.codepen.io/13471/mewtwo-gx.webp); }
+
+.card-pok {
+  z-index: 10;
+  position: relative;
+  width: 71.5vw;
+  height: 100vw;
+  margin: 20px;
+  overflow: hidden;
+  overflow: hidden;
+  transform-origin: center;
+  background-color: #040712;
+  background-image: var(--front);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: -5px -5px 5px -5px var(--color1), 5px 5px 5px -5px var(--color2), -7px -7px 10px -5px transparent, 7px 7px 10px -5px transparent, 0 0 5px 0px rgba(255, 255, 255, 0), 0 55px 35px -20px rgba(0, 0, 0, 0.5);
+  touch-action: none;
+  transition: transform 0.5s ease, box-shadow 0.2s ease;
+  will-change: transform, filter; }
+  @media screen and (min-width: 600px) {
+    .card-pok {
+      width: clamp(12.9vw, 61vh, 18vw);
+      height: clamp(18vw, 85vh, 25.2vw); } }
+
+.card-pok:hover {
+  box-shadow: -20px -20px 30px -25px var(--color1), 20px 20px 30px -25px var(--color2), -7px -7px 10px -5px var(--color1), 7px 7px 10px -5px var(--color2), 0 0 13px 4px rgba(255, 255, 255, 0.3), 0 55px 35px -20px rgba(0, 0, 0, 0.5); }
+
+.card-pok:before,
+.card-pok:after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  mix-blend-mode: color-dodge;
+  content: "";
+  opacity: .5;
+  transition: all .33s ease; }
+
+.card-pok:before {
+  z-index: 1;
+  background-image: linear-gradient(115deg, transparent 0%, var(--color1) 25%, transparent 47%, transparent 53%, var(--color2) 75%, transparent 100%);
+  background-position: 50% 50%;
+  background-size: 300% 300%;
+  filter: brightness(0.5) contrast(1);
+  opacity: .5; }
+
+.card-pok:after {
+  z-index: 2;
+  background-blend-mode: overlay;
+  background-image: url("https://assets.codepen.io/13471/sparkles.gif"), url(https://assets.codepen.io/13471/holo.png), linear-gradient(125deg, #ff008450 15%, #fca40040 30%, #ffff0030 40%, #00ff8a20 60%, #00cfff40 70%, #cc4cfa50 85%);
+  background-position: 50% 50%;
+  background-size: 160%;
+  mix-blend-mode: color-dodge;
+  filter: brightness(1) contrast(1);
+  opacity: 1;
+  opacity: .75;
+  transition: all .33s ease; }
+
+.card-pok.active:after,
+.card-pok:hover:after {
+  filter: brightness(1) contrast(1);
+  opacity: 1; }
+
+.card-pok.active,
+.card-pok:hover {
+  animation: none;
+  transition: box-shadow 0.1s ease-out; }
+
+.card-pok.active:before,
+.card-pok:hover:before {
+  background-image: linear-gradient(110deg, transparent 25%, var(--color1) 48%, var(--color2) 52%, transparent 75%);
+  background-position: 50% 50%;
+  background-size: 250% 250%;
+  animation: none;
+  filter: brightness(0.66) contrast(1.33);
+  opacity: .88;
+  transition: none; }
+
+.card-pok.active:before,
+.card-pok:hover:before,
+.card-pok.active:after,
+.card-pok:hover:after {
+  animation: none;
+  transition: none; }
+
+.card-pok.animated {
+  animation: holoCard 12s ease 0s 1;
+  transition: none; }
+  .card-pok.animated:before {
+    animation: holoGradient 12s ease 0s 1;
+    transition: none; }
+  .card-pok.animated:after {
+    animation: holoSparkle 12s ease 0s 1;
+    transition: none; }
+
 .bg-red-primary {
   background: #3B020D; }
 
@@ -83,26 +196,26 @@ p {
   color: #ffa000;
   transition: 0.8s ease; }
 
-/* ----------------------------------------- */
+/* ------------ ----------------------------- */
 /* CARD */
 /* ------------------------------------------*/
 /* ----------------------------------------- */
 /* CARD22 */
 /* ------------------------------------------*/
 .carta_player {
+  width: calc(159px);
+  height: 220px;
+  height: 220px;
   background: radial-gradient(circle, #ffffff 0%, #e29a67 50%, #d53636 100%);
-  height: 220px;
-  font-family: 'Turret Road', cursive;
-  font-weight: 800;
-  height: 220px;
-  width: calc(159px); }
+  font-family: "Turret Road", cursive;
+  font-weight: 800; }
 
 .pokemon-name-hp {
-  margin-bottom: 10px;
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin-bottom: 10px; }
 
 .pokemon-container {
   display: flex;
@@ -152,10 +265,20 @@ p {
 
 .pokemon-card {
   max-width: 165px;
-  margin-right: 15px;
-  margin-bottom: 15px;
+  margin-right: 90px;
   padding: 15px 15px 0 15px;
   border: 8px solid #f9ee75;
+  border-radius: 15px;
+  -webkit-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
+  text-align: center; }
+
+.card-back {
+  max-width: 165px;
+  margin-right: 90px;
+  padding: 15px 15px 0 15px;
+  border: 8px solid #0f1b5d;
   border-radius: 15px;
   -webkit-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
@@ -168,14 +291,19 @@ p {
 
 .pokemon-hp {
   color: #c23b1f;
-  font-size: 0.7em; }
+  font-size: 15px; }
+
+.pokemon-hp::before {
+  color: #383838;
+  font-size: 10px;
+  content: 'STATS: '; }
 
 .pokemon-type {
   font-size: 0.6em; }
 
 .pokemon-id {
   color: darkgreen;
-  font-size: 0.6em; }
+  font-size: 15px; }
 
 .pokemon-type-id {
   display: flex;
@@ -188,12 +316,17 @@ p {
 /* CARD-REVERSE */
 /* ------------------------------------------*/
 .reverse-card {
-  max-width: 160px;
-  height: 221px; }
+  width: 143px;
+  height: 204px;
+  margin-right: 90px; }
 
 .reverse-card-img {
   max-width: 160px;
   height: 221px; }
+
+.reverse-card-img img {
+  width: 143px;
+  height: 204px; }
 
 /* ----------------------------------------- */
 /* BATTLEFIELD */
