--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -13,119 +13,6 @@ p {
 .spacer {
   margin-top: 50px; }
 
-:root {
-  --color1: rgb(0, 231, 255);
-  --color2: rgb(255, 0, 231);
-  --back: url(https://cdn2.bulbagarden.net/upload/1/17/Cardback.jpg);
-  --charizard1: #fac;
-  --charizard2: #ddccaa;
-  --charizardfront: url(https://assets.codepen.io/13471/charizard-gx.webp);
-  --pika1: #54a29e;
-  --pika2: #a79d66;
-  --pikafront: url(https://assets.codepen.io/13471/pikachu-gx.webp);
-  --eevee1: #efb2fb;
-  --eevee2: #acc6f8;
-  --eeveefront: url(https://assets.codepen.io/13471/eevee-gx.webp);
-  --mewtwo1: #efb2fb;
-  --mewtwo2: #acc6f8;
-  --mewtwofront: url(https://assets.codepen.io/13471/mewtwo-gx.webp); }
-
-.card-pok {
-  z-index: 10;
-  position: relative;
-  width: 71.5vw;
-  height: 100vw;
-  margin: 20px;
-  overflow: hidden;
-  overflow: hidden;
-  transform-origin: center;
-  background-color: #040712;
-  background-image: var(--front);
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  box-shadow: -5px -5px 5px -5px var(--color1), 5px 5px 5px -5px var(--color2), -7px -7px 10px -5px transparent, 7px 7px 10px -5px transparent, 0 0 5px 0px rgba(255, 255, 255, 0), 0 55px 35px -20px rgba(0, 0, 0, 0.5);
-  touch-action: none;
-  transition: transform 0.5s ease, box-shadow 0.2s ease;
-  will-change: transform, filter; }
-  @media screen and (min-width: 600px) {
-    .card-pok {
-      width: clamp(12.9vw, 61vh, 18vw);
-      height: clamp(18vw, 85vh, 25.2vw); } }
-
-.card-pok:hover {
-  box-shadow: -20px -20px 30px -25px var(--color1), 20px 20px 30px -25px var(--color2), -7px -7px 10px -5px var(--color1), 7px 7px 10px -5px var(--color2), 0 0 13px 4px rgba(255, 255, 255, 0.3), 0 55px 35px -20px rgba(0, 0, 0, 0.5); }
-
-.card-pok:before,
-.card-pok:after {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-repeat: no-repeat;
-  mix-blend-mode: color-dodge;
-  content: "";
-  opacity: .5;
-  transition: all .33s ease; }
-
-.card-pok:before {
-  z-index: 1;
-  background-image: linear-gradient(115deg, transparent 0%, var(--color1) 25%, transparent 47%, transparent 53%, var(--color2) 75%, transparent 100%);
-  background-position: 50% 50%;
-  background-size: 300% 300%;
-  filter: brightness(0.5) contrast(1);
-  opacity: .5; }
-
-.card-pok:after {
-  z-index: 2;
-  background-blend-mode: overlay;
-  background-image: url("https://assets.codepen.io/13471/sparkles.gif"), url(https://assets.codepen.io/13471/holo.png), linear-gradient(125deg, #ff008450 15%, #fca40040 30%, #ffff0030 40%, #00ff8a20 60%, #00cfff40 70%, #cc4cfa50 85%);
-  background-position: 50% 50%;
-  background-size: 160%;
-  mix-blend-mode: color-dodge;
-  filter: brightness(1) contrast(1);
-  opacity: 1;
-  opacity: .75;
-  transition: all .33s ease; }
-
-.card-pok.active:after,
-.card-pok:hover:after {
-  filter: brightness(1) contrast(1);
-  opacity: 1; }
-
-.card-pok.active,
-.card-pok:hover {
-  animation: none;
-  transition: box-shadow 0.1s ease-out; }
-
-.card-pok.active:before,
-.card-pok:hover:before {
-  background-image: linear-gradient(110deg, transparent 25%, var(--color1) 48%, var(--color2) 52%, transparent 75%);
-  background-position: 50% 50%;
-  background-size: 250% 250%;
-  animation: none;
-  filter: brightness(0.66) contrast(1.33);
-  opacity: .88;
-  transition: none; }
-
-.card-pok.active:before,
-.card-pok:hover:before,
-.card-pok.active:after,
-.card-pok:hover:after {
-  animation: none;
-  transition: none; }
-
-.card-pok.animated {
-  animation: holoCard 12s ease 0s 1;
-  transition: none; }
-  .card-pok.animated:before {
-    animation: holoGradient 12s ease 0s 1;
-    transition: none; }
-  .card-pok.animated:after {
-    animation: holoSparkle 12s ease 0s 1;
-    transition: none; }
-
 .bg-red-primary {
   background: #3B020D; }
 
@@ -134,6 +21,9 @@ p {
 /* ------------------------------------------*/
 .pokemon-logo {
   max-height: 200px; }
+
+.header-poke {
+  min-height: 100vh; }
 
 /* ----------------------------------------- */
 /* FORMULARIO */
