--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* ----------------------------------------- */
 /* COLORES */
 /* ------------------------------------------*/
@@ -155,7 +156,6 @@ p {
 
 .pokemon-card {
   max-width: 165px;
-  margin-right: 90px;
   padding: 15px 15px 0 15px;
   border: 8px solid #f9ee75;
   border-radius: 15px;
@@ -166,7 +166,6 @@ p {
 
 .card-back {
   max-width: 165px;
-  margin-right: 90px;
   padding: 15px 15px 0 15px;
   border: 8px solid #0f1b5d;
   border-radius: 15px;
@@ -224,4 +223,19 @@ p {
 .battlefield {
   background-image: url("../../assets/img/battlefield.jpg");
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  height: 1067px;
+  width: 880px;
+  margin: 0 auto; }
+
+/* ----------------------------------------- */
+/* TAMAÑO DIVS */
+/* ------------------------------------------*/
+.computer-field {
+  height: 355px; }
+
+.battle-cards {
+  height: 355px; }
+
+.user-field {
+  height: 355px; }
