--- a/styles/scss/main.css
+++ b/styles/scss/main.css
@@ -6,25 +6,31 @@
 h1 {
   font-family: "Turret Road", cursive;
   font-weight: 400;
-  color: #f1f1f1; }
+  color: #f1f1f1;
+}
 
 p {
-  font-family: "Turret Road", cursive; }
+  font-family: "Turret Road", cursive;
+}
 
 .spacer {
-  margin-top: 50px; }
+  margin-top: 50px;
+}
 
 .bg-red-primary {
-  background: #3B020D; }
+  background: #3B020D;
+}
 
 /* ----------------------------------------- */
 /* HEADER */
 /* ------------------------------------------*/
 .pokemon-logo {
-  max-height: 200px; }
+  max-height: 200px;
+}
 
 .header-poke {
-  min-height: 100vh; }
+  min-height: 100vh;
+}
 
 /* ----------------------------------------- */
 /* FORMULARIO */
@@ -37,14 +43,16 @@ p {
   border-radius: 20px;
   background: #DD082F;
   color: #dfdfdf;
-  font-family: "Turret Road", cursive; }
+  font-family: "Turret Road", cursive;
+}
 
 .login-title {
   display: block;
   margin: 10px 0 20px 0;
   color: #131313;
   text-align: center;
-  text-transform: capitalize; }
+  text-transform: capitalize;
+}
 
 .input-field {
   box-sizing: border-box;
@@ -55,7 +63,8 @@ p {
   border-bottom: 1px solid #cfd8dc;
   outline: none;
   background: none;
-  color: #cfd8dc; }
+  color: #cfd8dc;
+}
 
 .btn-submit {
   width: 100%;
@@ -69,23 +78,27 @@ p {
   font-size: 17px;
   font-weight: bold;
   text-transform: capitalize;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .btn-submit:hover {
   background: #ffa000;
-  transition: 0.8s ease; }
+  transition: 0.8s ease;
+}
 
 .link-login {
   display: block;
   margin: 10px 0;
   float: right;
   color: #cfd8dc;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .link-login:hover {
   margin-right: -7px;
   color: #ffa000;
-  transition: 0.8s ease; }
+  transition: 0.8s ease;
+}
 
 /* ------------ ----------------------------- */
 /* CARD */
@@ -99,14 +112,16 @@ p {
   height: 220px;
   background: radial-gradient(circle, #ffffff 0%, #e29a67 50%, #d53636 100%);
   font-family: "Turret Road", cursive;
-  font-weight: 800; }
+  font-weight: 800;
+}
 
 .pokemon-name-hp {
   display: flex;
   flex-direction: row;
   align-items: baseline;
   justify-content: space-between;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+}
 
 .pokemon-container {
   display: flex;
@@ -115,12 +130,12 @@ p {
   justify-content: center;
   max-width: 1200px;
   margin: 0 auto;
-  -webkit-perspective: 100000;
-  perspective: 100000; }
+  perspective: 100000;
+}
 
 .pokemon-container .pokemon-card.flipped {
-  -webkit-transform: rotatey(-180deg);
-  transform: rotatey(-180deg); }
+  transform: rotatey(-180deg);
+}
 
 .pokemon-container .pokemon-card {
   width: 100%;
@@ -128,23 +143,26 @@ p {
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   transition: 0.5s;
-  -webkit-transition: 0.35s; }
+  -webkit-transition: 0.35s;
+}
 
 .pokemon-container .pokemon-card .face {
   z-index: 2;
   width: 100%;
   height: 210px;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
+  backface-visibility: hidden;
+}
 
 .pokemon-container .pokemon-card .front {
   z-index: 1;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .pokemon-container .pokemon-card .back {
-  -webkit-transform: rotatey(-180deg);
   transform: rotatey(-180deg);
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .back img {
   /* 	position:relative; */
@@ -152,54 +170,58 @@ p {
   width: 100%;
   height: 240px;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 .pokemon-card {
   max-width: 165px;
   padding: 15px 15px 0 15px;
   border: 8px solid #f9ee75;
   border-radius: 15px;
-  -webkit-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
-  -moz-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
   box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
   text-align: center;
-  margin: 0 15px; }
+  margin: 0 15px;
+}
 
 .card-back {
   max-width: 165px;
   padding: 15px 15px 0 15px;
   border: 8px solid #002576;
   border-radius: 15px;
-  -webkit-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
-  -moz-box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
   box-shadow: 0px 0px 7px 0.5px rgba(0, 0, 0, 0.8);
   text-align: center;
   margin: 0 20px;
   background: url(../../assets/img/pokemon/poke_card_back.jpg);
-  background-size: cover; }
+  background-size: cover;
+}
 
 .imageContainer {
   border-radius: 50%;
-  background-color: beige; }
+  background-color: beige;
+}
 
 .pokemon-hp {
   color: #c23b1f;
-  font-size: 15px; }
+  font-size: 15px;
+}
 
 .pokemon-hp::before {
   color: #383838;
   font-size: 10px;
-  content: 'STATS: '; }
+  content: "STATS: ";
+}
 
 .pokemon-type {
   width: 24px;
   height: 24px;
   margin-top: -4px;
-  margin-right: -8px; }
+  margin-right: -8px;
+}
 
 .pokemon-id {
   color: darkgreen;
-  font-size: 15px; }
+  font-size: 15px;
+}
 
 .pokemon-type-id {
   flex-direction: row;
@@ -208,7 +230,8 @@ p {
   justify-content: space-between;
   align-items: flex-start;
   align-content: flex-start;
-  flex-wrap: nowrap; }
+  flex-wrap: nowrap;
+}
 
 /* ----------------------------------------- */
 /* CARD-REVERSE */
@@ -216,15 +239,18 @@ p {
 .reverse-card {
   width: 143px;
   height: 204px;
-  margin-right: 90px; }
+  margin-right: 90px;
+}
 
 .reverse-card-img {
   max-width: 160px;
-  height: 221px; }
+  height: 221px;
+}
 
 .reverse-card-img img {
   width: 143px;
-  height: 204px; }
+  height: 204px;
+}
 
 /* ----------------------------------------- */
 /* BATTLEFIELD */
@@ -235,41 +261,51 @@ p {
   background-size: cover;
   height: 907px;
   width: 880px;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 /* ----------------------------------------- */
 /* TAMAÑO DIVS */
 /* ------------------------------------------*/
 .computer-field {
-  height: 302px; }
+  height: 302px;
+}
 
 .battle-cards {
-  height: 302px; }
+  height: 302px;
+}
 
 .user-field {
-  height: 302px; }
+  height: 302px;
+}
 
 /* ----------------------------------------- */
 /* TABLA RESULTADOS */
 /* ------------------------------------------*/
 .bg-red-table {
   background: #DD082F;
-  color: #f1f1f1; }
-  .bg-red-table h3 {
-    color: #FFCB05; }
+  color: #f1f1f1;
+}
+.bg-red-table h3 {
+  color: #FFCB05;
+}
 
 .tabla-victoria::before {
-  content: 'Victorias: '; }
+  content: "Victorias: ";
+}
 
 .tabla-derrota::before {
-  content: 'Derrotas: '; }
+  content: "Derrotas: ";
+}
 
 /* ----------------------------------------- */
 /* TABLA RESULTADOS */
 /* ------------------------------------------*/
 .bg-red-table {
   background: #DD082F;
-  color: #f1f1f1; }
+  color: #f1f1f1;
+}
 
 .bg-red-table h3 {
-  color: #FFCB05; }
+  color: #FFCB05;
+}/*# sourceMappingURL=main.css.map */
