agregados contadores de victoria y estilizado el loguin

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -24,25 +24,40 @@ p {
   max-height: 200px; }
 
 .header-poke {
-  min-height: 100vh; }
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.header-bg {
+  width: 880px;
+  height: 907px;
+  background: url(../../assets/img/pokemon/bg_login.jpg);
+  background-size: cover;
+  background-repeat: no-repeat; }
 
 /* ----------------------------------------- */
 /* FORMULARIO */
 /* ------------------------------------------*/
+h1 {
+  font-size: 3em !important; }
+
 .login-box {
   width: 320px;
   height: 250px;
   margin: 0 auto;
   padding: 20px;
-  border-radius: 20px;
-  background: #DD082F;
-  color: #dfdfdf;
+  border: 4px solid white;
+  color: white;
+  backdrop-filter: blur(5px);
   font-family: "Turret Road", cursive; }
 
 .login-title {
   display: block;
   margin: 10px 0 20px 0;
-  color: #131313;
+  font-size: 2em;
+  font-weight: 700;
+  color: white;
   text-align: center;
   text-transform: capitalize; }
 
@@ -50,12 +65,14 @@ p {
   box-sizing: border-box;
   width: 100%;
   height: 40px;
+  text-align: center;
+  font-size: 2em;
   margin: 0 0 20px 0;
   border: none;
-  border-bottom: 1px solid #cfd8dc;
+  border-bottom: 3px solid white;
   outline: none;
-  background: none;
-  color: #cfd8dc; }
+  background: none !important;
+  color: white; }
 
 .btn-submit {
   width: 100%;
@@ -235,7 +252,8 @@ p {
   background-size: cover;
   height: 907px;
   width: 880px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  margin-top: 25px; }
 
 /* ----------------------------------------- */
 /* TAMAÑO DIVS */
@@ -273,3 +291,45 @@ p {
 
 .bg-red-table h3 {
   color: #FFCB05; }
+
+/* ----------------------------------------- */
+/* TABLA RESULTADOS */
+/* ------------------------------------------*/
+.fondo {
+  margin-top: 20px;
+  width: 880px;
+  position: relative; }
+
+.scorers1 {
+  position: absolute;
+  bottom: 5%; }
+
+.scorers2 {
+  position: absolute; }
+
+.pokeball {
+  height: 64px;
+  width: 64px;
+  background: url(../../assets/img/pokemon/pokeball_count_score.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+  margin-top: 20px; }
+
+.pc_logo {
+  height: 64px;
+  width: 64px;
+  background: white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+  margin-top: 20px; }
+
+.player_logo {
+  height: 64px;
+  width: 64px;
+  background: white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+  margin-top: 20px; }
