--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -16,40 +16,60 @@
 
 .header-poke {
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-bg {
+  width: 880px;
+  height: 907px;
+  background: url(../../assets/img/pokemon/bg_login.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /* ----------------------------------------- */
 /* FORMULARIO */
 /* ------------------------------------------*/
+h1{
+  font-size: 3em !important;
+}
+
 .login-box {
   width: 320px;
   height: 250px;
   margin: 0 auto;
   padding: 20px;
-  border-radius: 20px;
-  background: $bg-red-secondary;
-  color: $text-primary1;
+  border: 4px solid white;
+  color: white;
+  backdrop-filter: blur(5px);
   font-family: "Turret Road", cursive;
 }
 
 .login-title {
   display: block;
   margin: 10px 0 20px 0;
-  color: $text-secondary;
+  font-size: 2em;
+  font-weight: 700;
+  color: white;
   text-align: center;
   text-transform: capitalize;
 }
+
 
 .input-field {
   box-sizing: border-box;
   width: 100%;
   height: 40px;
+  text-align: center;
+  font-size: 2em;
   margin: 0 0 20px 0;
   border: none;
-  border-bottom: 1px solid #cfd8dc;
+  border-bottom: 3px solid white;
   outline: none;
-  background: none;
-  color: #cfd8dc;
+  background: none !important;
+  color: white;
 }
 
 .btn-submit {
@@ -238,9 +258,9 @@
   width: 24px;
   height: 24px;
   margin-top: -4px;
-  margin-right: -8px;   
-}   
- 
+  margin-right: -8px;
+}
+
 .pokemon-id {
   color: darkgreen;
   font-size: 15px;
@@ -285,6 +305,7 @@
   height: 907px;
   width: 880px;
   margin: 0 auto;
+  margin-top: 25px;
 }
 
 /* ----------------------------------------- */
@@ -307,8 +328,9 @@
 /* TABLA RESULTADOS */
 /* ------------------------------------------*/
 .bg-red-table {
-  background   : $bg-red-secondary;
-  color:  $text-primary;
+  background: $bg-red-secondary;
+  color: $text-primary;
+
   h3 {
     color: $text-amarillo
   }
@@ -327,6 +349,60 @@
 /* ------------------------------------------*/
 .bg-red-table {
   background: #DD082F;
-  color: #f1f1f1; }
-  .bg-red-table h3 {
-    color: #FFCB05; }
+  color: #f1f1f1;
+}
+
+.bg-red-table h3 {
+  color: #FFCB05;
+}
+
+/* ----------------------------------------- */
+/* TABLA RESULTADOS */
+/* ------------------------------------------*/
+
+.fondo{
+  margin-top: 20px;
+  width: 880px;
+  position: relative;
+}
+
+.scorers1{
+  position: absolute;
+  bottom: 5%;
+}
+
+.scorers2{
+  position: absolute;
+}
+
+.pokeball {
+  height: 64px;
+  width: 64px;
+  background: url(../../assets/img/pokemon/pokeball_count_score.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.pc_logo{
+  height: 64px;
+  width: 64px;
+  background: white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.player_logo{
+  height: 64px;
+  width: 64px;
+  background: white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+
