--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -307,6 +307,16 @@ h1 {
 .scorers2 {
   position: absolute; }
 
+.turn {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  background: url(../../assets/img/pokemon/round_3.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  right: 0%;
+  top: 43%; }
+
 .pokeball {
   height: 64px;
   width: 64px;
