--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -4,6 +4,12 @@ h1 {
   color      : $text-primary;
 }
 
+h2 {
+  font-family: "Turret Road", cursive;
+  font-weight: 400;
+  color      : $text-primary;
+}
+
 p {
   font-family: "Turret Road", cursive;
   // color: $text-primary;
