--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -8,6 +8,11 @@ h1 {
   font-weight: 400;
   color: #f1f1f1; }
 
+h2 {
+  font-family: "Turret Road", cursive;
+  font-weight: 400;
+  color: #f1f1f1; }
+
 p {
   font-family: "Turret Road", cursive; }
 
@@ -189,7 +194,7 @@ p {
 .pokemon-hp::before {
   color: #383838;
   font-size: 10px;
-  content: 'STATS: '; }
+  content: "STATS: "; }
 
 .pokemon-type {
   width: 24px;
@@ -241,7 +246,8 @@ p {
 /* TAMAÑO DIVS */
 /* ------------------------------------------*/
 .computer-field {
-  height: 302px; }
+  height: 302px;
+  margin-top: 20px; }
 
 .battle-cards {
   height: 302px; }
@@ -258,18 +264,75 @@ p {
   .bg-red-table h3 {
     color: #FFCB05; }
 
-.tabla-victoria::before {
-  content: 'Victorias: '; }
+.body-black {
+  background: black; }
 
-.tabla-derrota::before {
-  content: 'Derrotas: '; }
+.body-red {
+  background: #3B020D; }
+
+#resultados:before {
+  content: "Tus resultados, "; }
 
 /* ----------------------------------------- */
 /* TABLA RESULTADOS */
 /* ------------------------------------------*/
 .bg-red-table {
-  background: #DD082F;
+  background: #dd082f;
   color: #f1f1f1; }
 
 .bg-red-table h3 {
-  color: #FFCB05; }
+  color: #ffcb05; }
+
+.bg-red-primary {
+  background: #3B020D; }
+
+.table-container {
+  min-height: 100vh; }
+
+.table {
+  background: #DD082F;
+  border-radius: 13px;
+  border-spacing: 0;
+  border: white;
+  text-align: center; }
+
+table th {
+  padding: 10px; }
+
+table tr:last-child > td {
+  border-bottom: none; }
+
+tr:last-child {
+  border: none; }
+
+tr:last-child {
+  border: none; }
+
+thead {
+  border: white;
+  color: #dbdbdb; }
+
+#userResults {
+  font-weight: 400;
+  color: #f1f1f1;
+  font-size: 22px; }
+
+a.btn-submit {
+  color: red;
+  width: 100%;
+  height: 40px;
+  margin: 20px 0;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  background: #FFCB05;
+  color: #131313;
+  font-size: 17px;
+  font-weight: bold;
+  text-transform: capitalize;
+  text-align: center;
+  padding-top: 8px;
+  text-decoration: none; }
+
+a.btn-submit:hover {
+  color: inherit; }
