--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -113,7 +113,7 @@
 // .user-card__img {
 //   align-self: center;
 //   background: rgb(21, 21, 53);
-// } 
+// }
 
 // .user-card__img img {
 //   border: 5px solid rgb(255, 166, 0);
@@ -231,16 +231,16 @@
 .pokemon-hp::before {
   color: #383838;
   font-size: 10px;
-  content: 'STATS: ';
+  content: "STATS: ";
 }
 
 .pokemon-type {
   width: 24px;
   height: 24px;
   margin-top: -4px;
-  margin-right: -8px;   
-}   
- 
+  margin-right: -8px;
+}
+
 .pokemon-id {
   color: darkgreen;
   font-size: 15px;
@@ -292,6 +292,7 @@
 /* ------------------------------------------*/
 .computer-field {
   height: 302px;
+  margin-top: 20px;
 }
 
 .battle-cards {
@@ -302,31 +303,101 @@
   height: 302px;
 }
 
-
 /* ----------------------------------------- */
 /* TABLA RESULTADOS */
 /* ------------------------------------------*/
 .bg-red-table {
-  background   : $bg-red-secondary;
-  color:  $text-primary;
+  background: $bg-red-secondary;
+  color: $text-primary;
   h3 {
-    color: $text-amarillo
+    color: $text-amarillo;
   }
 }
 
-.tabla-victoria::before {
-  content: 'Victorias: '
+.body-black {
+  background: black;
 }
 
-.tabla-derrota::before {
-  content: 'Derrotas: '
+.body-red {
+  background: $bg-red-primary;
+}
+
+#resultados:before {
+  content: "Tus resultados, ";
 }
 
 /* ----------------------------------------- */
 /* TABLA RESULTADOS */
 /* ------------------------------------------*/
 .bg-red-table {
-  background: #DD082F;
-  color: #f1f1f1; }
-  .bg-red-table h3 {
-    color: #FFCB05; }
+  background: #dd082f;
+  color: #f1f1f1;
+}
+.bg-red-table h3 {
+  color: #ffcb05;
+}
+
+.bg-red-primary {
+  background: $bg-red-primary;
+}
+
+.table-container {
+  min-height: 100vh;
+}
+
+.table {
+  background: $bg-red-secondary;
+  border-radius: 13px;
+  border-spacing: 0;
+  border: white;
+  text-align: center;
+}
+
+table th {
+  padding: 10px;
+}
+
+table tr:last-child > td {
+  border-bottom: none;
+}
+
+tr:last-child {
+  border: none;
+}
+
+tr:last-child {
+  border: none;
+}
+
+thead {
+  border: white;
+  color: rgb(219, 219, 219);
+}
+
+#userResults {
+  font-weight: 400;
+  color      : $text-primary;
+  font-size:22px;
+}
+
+a.btn-submit {
+  color: red;
+  width: 100%;
+  height: 40px;
+  margin: 20px 0;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  background: $text-amarillo;
+  color: $text-secondary;
+  font-size: 17px;
+  font-weight: bold;
+  text-transform: capitalize;
+  text-align: center;
+  padding-top: 8px;
+  text-decoration: none;
+}
+
+a.btn-submit:hover {
+  color: inherit;
+}
