--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -32,7 +32,8 @@ p {
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  text-shadow: 1px 2px 1px black; }
 
 .header-bg {
   width: 880px;
@@ -305,14 +306,23 @@ h1 {
   background: #3B020D; }
 
 .table-container {
-  min-height: 100vh; }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-shadow: 1px 2px 1px black; }
 
 .table {
-  background: #DD082F;
-  border-radius: 13px;
+  backdrop-filter: blur(5px);
+  color: white !important;
   border-spacing: 0;
-  border: white;
+  border: 3px solid white;
   text-align: center; }
+
+.table-fondo {
+  height: 907px;
+  width: 880px;
+  background: url(../../assets/img/pokemon/bg_scoreboard.jpg); }
 
 table th {
   padding: 10px; }
@@ -328,7 +338,8 @@ tr:last-child {
 
 thead {
   border: white;
-  color: #dbdbdb; }
+  color: white;
+  font-size: 1.4em; }
 
 #userResults {
   font-weight: 400;
@@ -350,7 +361,11 @@ a.btn-submit {
   text-transform: capitalize;
   text-align: center;
   padding-top: 8px;
-  text-decoration: none; }
+  text-decoration: none;
+  text-shadow: none; }
+
+.text-center {
+  margin-bottom: 5px; }
 
 a.btn-submit:hover {
   color: inherit;
@@ -359,6 +374,15 @@ a.btn-submit:hover {
 
 .bg-red-table h3 {
   color: #FFCB05; }
+
+.buttons {
+  text-shadow: none;
+  align-items: center;
+  justify-content: space-evenly; }
+
+.buttons input,
+.buttons a {
+  width: 170px !important; }
 
 /* ----------------------------------------- */
 /* TABLA RESULTADOS */
@@ -374,6 +398,22 @@ a.btn-submit:hover {
 
 .scorers2 {
   position: absolute; }
+
+.winner_loser {
+  position: absolute;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 200px;
+  width: 600px;
+  top: 37%;
+  left: 15%; }
+
+.bg-winner {
+  background: url(../../assets/img/pokemon/u_win.png); }
+
+.bg-loser {
+  background: url(../../assets/img/pokemon/u_lost.png); }
 
 .pokeball {
   height: 64px;
