--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -481,22 +481,25 @@ a.btn-submit:hover {
 
 .winner_loser{
   position: absolute;
-  
+  height: 200px;
+  width: 800px;
+  background-size: contain;
+  top: 37%;
+  left: 4%;
+}
+
+.bgwinner {
+  background: url(../../assets/img/pokemon/u_win.png);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  height: 200px;
-  width: 600px;
-  top: 37%;
-  left: 15%;
 }
 
-.bg-winner{
-  background: url(../../assets/img/pokemon/u_win.png);
-}
-
-.bg-loser {
+.bgloser {
   background: url(../../assets/img/pokemon/u_lost.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .pokeball {
@@ -533,11 +536,16 @@ a.btn-submit:hover {
   height: 100px;
   width: 100px;
   position: absolute;
-  background: url(../../assets/img/pokemon/round_1.png);
   background-size: cover;
   background-repeat: no-repeat;
   right: 0%;
   top: 43%;
+}
+
+.turno-1 {
+  background: url(../../assets/img/pokemon/round_1.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .turno-2 {
