--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -276,7 +276,7 @@ h1 {
   color: darkgreen;
   font-size: 15px;
   background-color: white;
-  margin-top: -2px;
+  margin-top: -2pxgo;
   margin-right: -13px;
   padding: 1px;
   padding-left: 2px;
